voltando novamente o properties do banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ javafx.jdbc.driver=org.postgresql.Driver
 javafx.datasource.url=jdbc:postgresql://localhost:5432/db_emulador
 javafx.datasource.username=user_emulador
 javafx.datasource.password=pass_emulador
+
+# Impressão ZPL
+zpl.server.url=http://192.168.0.100:8080/zpl
