Criacao do preview e o cache do ZPL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ javafx.datasource.url=jdbc:postgresql://localhost:5432/db_emulador
 javafx.datasource.username=user_emulador
 javafx.datasource.password=pass_emulador
 
-# Impressão ZPL
-zpl.server.url=http://192.168.0.100:8080/zpl
+# Impress\u00e3o ZPL
+zpl.server.url=http://127.0.0.1:8082/zpl
