--- a/pom.xml
+++ b/pom.xml
@@ -138,28 +138,27 @@
 
     <build>
         <plugins>
-            <!-- Compiler -->
+            <!-- Compilador -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.11.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>17</release> <!-- garante source/target juntos -->
                 </configuration>
             </plugin>
 
-            <!-- JavaFX -->
+            <!-- Plugin JavaFX para rodar via: mvn javafx:run -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>br.com.automacaowebia.app.Application</mainClass>
+                    <mainClass>br.com.automacaowebia.app.Launcher</mainClass>
                 </configuration>
             </plugin>
 
-            <!-- Criação de JAR com dependências -->
+            <!-- Cria um uber-jar executável -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -171,11 +170,27 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <!-- Corrige paths duplicados de JavaFX e adiciona Manifest -->
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>br.com.automacaowebia.app.Application</mainClass>
+                                    <mainClass>br.com.automacaowebia.app.Launcher</mainClass>
+                                </transformer>
+                                <!-- Mantém arquivo module-info se houver -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>module-info.class</resource>
                                 </transformer>
                             </transformers>
+                            <!-- Evita advertência de classes duplicadas -->
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                         </configuration>
                     </execution>
                 </executions>
