--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,19 @@
             <artifactId>core</artifactId>
             <version>12.62.7</version>
         </dependency>
+        <!-- JNA core -->
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.14.0</version>
+        </dependency>
+
+        <!-- JNA platform (contém WMI helpers) -->
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform</artifactId>
+            <version>5.14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
