--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-javafx.jdbc.driver=org.postgresql.Driver
-javafx.datasource.url=jdbc:postgresql://localhost:5432/db_emulador
-javafx.datasource.username=user_emulador
-javafx.datasource.password=pass_emulador
-
+javafx.jdbc.driver=org.sqlite.JDBC
+javafx.datasource.url=jdbc:sqlite:./db/db_emulador.db
+javafx.datasource.username=
+javafx.datasource.password=
 # Impress\u00e3o ZPL
 zpl.server.url=http://127.0.0.1:8082/zpl
