Criacao do mapeadmento e ajuste no banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 javafx.jdbc.driver=org.sqlite.JDBC
-javafx.datasource.url=jdbc:sqlite:./db/db_emulador.db
+javafx.datasource.url=jdbc:sqlite:./db/db_emulador.db?journal_mode=WAL&busy_timeout=5000
 javafx.datasource.username=
 javafx.datasource.password=
 # Impress\u00e3o ZPL
