--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>br.com.automacaowebia</groupId>
     <artifactId>label-stream-viewer</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <name>Label Stream Viewer</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <javafx.version>23.0.1</javafx.version>
         <log4j.version>2.22.1</log4j.version>
     </properties>
@@ -173,7 +173,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>br.com.automacaowebia.app.Launcher</mainClass>
+                    <mainClass>br.com.automacaowebia.codilinesimulatorfx.CodilineSimulatorFx</mainClass>
                 </configuration>
             </plugin>
 
@@ -192,7 +192,7 @@
                             <!-- Corrige paths duplicados de JavaFX e adiciona Manifest -->
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>br.com.automacaowebia.app.Launcher</mainClass>
+                                    <mainClass>br.com.automacaowebia.codilinesimulatorfx.CodilineSimulatorFx</mainClass>
                                 </transformer>
                                 <!-- Mantém arquivo module-info se houver -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
