--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>br.com.automacaowebia.codilinesimulatorfx.CodilineSimulatorFx</mainClass>
+                    <mainClass>br.com.automacaowebia.app.Launcher</mainClass>
                 </configuration>
             </plugin>
 
@@ -192,7 +192,7 @@
                             <!-- Corrige paths duplicados de JavaFX e adiciona Manifest -->
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>br.com.automacaowebia.codilinesimulatorfx.CodilineSimulatorFx</mainClass>
+                                    <mainClass>br.com.automacaowebia.app.Launcher</mainClass>
                                 </transformer>
                                 <!-- Mantém arquivo module-info se houver -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
